--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,15 @@
     "aelvan/inlin": "^2.0",
     "aelvan/stamp": "^2.0",
     "barrelstrength/sprout-encode-email": "^2.0",
-    "barrelstrength/sprout-fields": "^3.0",
-    "barrelstrength/sprout-forms": "^3.0@beta",
-    "barrelstrength/sprout-forms-us-states": "^1.0",
-    "barrelstrength/sprout-lists": "^2.0",
-    "codemonauts/craft-instagram-feed": "^1.0",
+    "barrelstrength/sprout-fields": "^3.8",
+    "barrelstrength/sprout-forms": "^3.12",
+    "barrelstrength/sprout-forms-us-states": "^1.1",
+    "barrelstrength/sprout-lists": "^3.2",
+    "codemonauts/craft-instagram-feed": "^1.0.0",
     "craftcms/anchors": "^2.0",
-    "craftcms/aws-s3": "^1.0",
-    "craftcms/cms": "^3.0",
-    "craftcms/commerce": "^2.1",
+    "craftcms/aws-s3": "1.2.9",
+    "craftcms/cms": "3.5.1",
+    "craftcms/commerce": "3.2.0.2",
     "craftcms/contact-form": "^2.0",
     "craftcms/contact-form-honeypot": "^1.0",
     "craftcms/element-api": "^2.4",
@@ -49,14 +49,14 @@
     "dukt/facebook": "^2.0.0",
     "dukt/twitter": "^2.0.0",
     "glue-agency/craft-fingerprint-assets": "^1.0",
-    "lukeyouell/craft-readtime": "^1.1",
-    "lukeyouell/craft-updatechecker": "^1.1",
+    "jalendport/craft-readtime": "^1.6",
+    "jalendport/craft-updatechecker": "^1.3",
     "mblode/svgplaceholder": "^1.0",
     "mexitek/phpcolors": "dev-master",
     "mikestecker/craft-readability": "^1.0",
     "mikestecker/craft-videoembedder": "^1.0",
     "mmikkel/retcon": "v2.x-dev",
-    "newism/craft3-fields": "^0.0.14",
+    "newism/craft3-fields": "^0.0.17",
     "nfourtythree/vcard": "^1.0",
     "nystudio107/craft-cookies": "^1.1",
     "nystudio107/craft-fastcgicachebust": "^1.0",
@@ -67,19 +67,19 @@
     "nystudio107/craft-seomatic": "^3.0.0",
     "nystudio107/craft-typogrify": "^1.0",
     "nystudio107/craft-youtubeliveembed": "^1.0",
-    "rias/craft-password-policy": "^1.0",
+    "percipioglobal/craft-password-policy": "1.0.6",
     "rias/craft-position-fieldtype": "^1.0",
-    "rias/craft-scout": "^1.1",
+    "rias/craft-scout": "2.3.1",
     "selvinortiz/patrol": "^3.0",
     "superbig/craft-imagerpretransform": "^2.0",
     "superbig/craft3-calendarlinks": "^1.0",
     "superbig/craft3-shortcut": "^2.0",
     "supercool/tablemaker": "^2.0",
-    "topshelfcraft/wordsmith": "^3.0",
+    "topshelfcraft/wordsmith": "3.3.0",
     "unionco/calendarize": "^1.2",
-    "verbb/cp-nav": "^2.0",
-    "verbb/events": "^1.0",
-    "verbb/expanded-singles": "^1.0",
+    "verbb/cp-nav": "^3.0",
+    "verbb/events": "1.4.12",
+    "verbb/expanded-singles": "1.1.3",
     "verbb/smith": "^1.0",
     "vlucas/phpdotenv": "^2.4.0"
   },
@@ -96,10 +96,6 @@
     {
       "type": "composer",
       "url": "https://asset-packagist.org"
-    },
-    {
-      "type": "path",
-      "url": "../../../other/craft3-venti/"
     }
   ]
 }
