--- a/nginx-config/partials/redirects.conf
+++ b/nginx-config/partials/redirects.conf
@@ -197,3 +197,27 @@ location = /businessspotlight {
 location = /dogdateafternoon {
     return 301 /news-events/type/story/dogdateafternoon;
 }
+
+location = /riverwalk {
+    return 301 /government/departments/parks-recreation/mississinewa-riverwalk;
+}
+
+location = /rentalopportunities {
+    return 301 /government/departments/parks-recreation/rental-opportunities;
+}
+
+location = /careers {
+    return 301 /employment;
+}
+
+location = /jobs {
+    return 301 /employment;
+}
+
+location = /incentives {
+    return 301 /living/incentives;
+}
+
+location = /plans {
+    return 301 /government/departments/city-planning/planning-documents;
+}
