update package and gulp

--- a/package.json
+++ b/package.json
@@ -111,24 +111,24 @@
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
     "autosize": "^4.0.2",
-    "choices.js": "^7.0.0",
+    "choices.js": "^7.1.5",
     "fg-loadcss": "^2.1.0",
     "font-awesome-stylus": "^4.7.1",
     "fontfaceobserver": "^2.1.0",
-    "jarallax": "^1.11.0",
-    "jquery": "^3.4.1",
-    "lazysizes": "^5.1.1",
+    "jarallax": "^1.12.1",
+    "jquery": "^3.5.1",
+    "lazysizes": "^5.2.2",
     "normalize.css": "^8.0.1",
-    "outdated-browser-rework": "^2.9.0",
+    "outdated-browser-rework": "^2.10.0",
     "picturefill": "^3.0.3",
     "responsive-social-buttons": "^1.0.7"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.12",
     "chalk": "^2.4.2",
-    "critical": "^1.3.6",
+    "critical": "^1.3.10",
     "cross-env": "^5.2.1",
     "css-loader": "^0.28.11",
     "css-mqpacker": "^7.0.0",
@@ -144,12 +144,12 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-debug": "^3.2.0",
     "gulp-download": "^0.0.1",
-    "gulp-favicons": "^2.3.1",
+    "gulp-favicons": "^2.4.0",
     "gulp-filter": "^6.0.0",
     "gulp-header": "^2.0.9",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^4.1.0",
-    "gulp-load-plugins": "^2.0.1",
+    "gulp-load-plugins": "^2.0.3",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
@@ -165,9 +165,9 @@
     "gulp-uglify": "^3.0.2",
     "jeet": "^7.2.0",
     "lost": "^8.3.1",
-    "moment": "^2.24.0",
+    "moment": "^2.27.0",
     "nib": "^1.1.2",
-    "pa11y": "^5.2.0",
+    "pa11y": "^5.3.0",
     "phantomjs-prebuilt": "^2.1.16",
     "postcss-brand-colors": "^3.0.0",
     "postcss-cssnext": "^3.1.0",
@@ -176,8 +176,12 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "gulp",
     "build": "gulp build"
+  },
+  "resolutions": {
+    "graceful-fs": "4.2.4"
   },
   "engines": {
     "node": ">=8.0.0 <11.0.0",
