--- a/nginx-config/partials/redirects.conf
+++ b/nginx-config/partials/redirects.conf
@@ -221,3 +221,11 @@ location = /incentives {
 location = /plans {
     return 301 /government/departments/city-planning/planning-documents;
 }
+
+location = /parking {
+    return 301 /living/incentives;
+}
+
+location = /cmac {
+    return 301 /government/boards/arts-commission;
+}
